--- a/index.html
+++ b/index.html
@@ -45,56 +45,107 @@
             <a href="#tabpage2" class="tab">2025</a>
         </p>
         <div id="tabbody">
-            <div id="tabpage1">
-                …… タブ1の中身 ……
-                <table style="width: 100%;">
-                    <tr style="width: 100%;">
-                        <th>日</th>
-                        <th>曜</th>
-                        <th>2024年</th>
-                        <th>(R6) 4月</th>
-                        <th style="width: 60%;">降り番予約者</th>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>月</td>
-                        <td colspan="2">✕</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>2</td>
-                        <td>火</td>
-                        <td colspan="2">R</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>3</td>
-                        <td>水</td>
-                        <td colspan="2">R</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>4</td>
-                        <td>木</td>
-                        <td colspan="2">R</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>5</td>
-                        <td>金</td>
-                        <td colspan="2">定期</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>6</td>
-                        <td>土</td>
-                        <td colspan="2">✕</td>
-                        <td></td>
-                    </tr>
-                </table>
+            <div id="tabpage1" class="tabpage">
+
+                <div class="slider-group">
+
+                    <div class="slider-card">
+
+                        …… タブ1の中身 ……
+                        <table>
+                            <tr>
+                                <th>日</th>
+                                <th>曜</th>
+                                <th>2024年</th>
+                                <th>(R6) 4月</th>
+                                <th>降り番予約者</th>
+                            </tr>
+                            <tr>
+                                <td>1</td>
+                                <td>月</td>
+                                <td colspan="2">✕</td>
+                                <td></td>
+                                <td><input type="checkbox"></td>
+                            </tr>
+                            <tr>
+                                <td>2</td>
+                                <td>火</td>
+                                <td colspan="2">R</td>
+                                <td></td>
+                                <td><input type="checkbox"></td>
+                            </tr>
+                            <tr>
+                                <td>3</td>
+                                <td>水</td>
+                                <td colspan="2">R</td>
+                                <td></td>
+                                <td><input type="checkbox"></td>
+                            </tr>
+                            <tr>
+                                <td>4</td>
+                                <td>木</td>
+                                <td colspan="2">R</td>
+                                <td></td>
+                                <td><input type="checkbox"></td>
+                            </tr>
+                        </table>
+
+                    </div>
+
+                    <div class="slider-card">
+
+                        …… タブ1の中身 ……
+                        <table>
+                            <tr>
+                                <th>日</th>
+                                <th>曜</th>
+                                <th>2024年</th>
+                                <th>(R6) 4月</th>
+                                <th>降り番予約者</th>
+                            </tr>
+                            <tr>
+                                <td>1</td>
+                                <td>月</td>
+                                <td colspan="2">✕</td>
+                                <td></td>
+                                <td><input type="checkbox"></td>
+                            </tr>
+                            <tr>
+                                <td>2</td>
+                                <td>火</td>
+                                <td colspan="2">R</td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>3</td>
+                                <td>水</td>
+                                <td colspan="2">R</td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>4</td>
+                                <td>木</td>
+                                <td colspan="2">R</td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>5</td>
+                                <td>金</td>
+                                <td colspan="2">定期</td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                        </table>
+
+                    </div>
+
+                </div>
 
             </div>
-            <div id="tabpage2">…… タブ2の中身 ……</div>
+            <div id="tabpage2" class="tabpage">…… タブ2の中身 ……</div>
         </div>
     </div>
 
