--- a/index.html
+++ b/index.html
@@ -11,97 +11,71 @@
 <body>
 
     <div id="calendar">
-        <!-- <p id="tabcontrol">
-            <a href="#tabpage1" class="tab">4</a>
-            <a href="#tabpage2" class="tab">5</a>
-            <a href="#tabpage3" class="tab">6</a>
-            <a href="#tabpage4" class="tab">7</a>
-            <a href="#tabpage5" class="tab">8</a>
-            <a href="#tabpage6" class="tab">9</a>
-            <a href="#tabpage7" class="tab">10</a>
-            <a href="#tabpage8" class="tab">11</a>
-            <a href="#tabpage9" class="tab">12</a>
-            <a href="#tabpage10" class="tab">1</a>
-            <a href="#tabpage11" class="tab">2</a>
-            <a href="#tabpage12" class="tab">3</a>
-        </p>
-        <div id="tabbody">
-            <div id="tabpage1">…… タブ1の中身 ……</div>
-            <div id="tabpage2">…… タブ2の中身 ……</div>
-            <div id="tabpage3">…… タブ3の中身 ……</div>
-            <div id="tabpage4">…… タブ4の中身 ……</div>
-            <div id="tabpage5">…… タブ5の中身 ……</div>
-            <div id="tabpage6">…… タブ6の中身 ……</div>
-            <div id="tabpage7">…… タブ7の中身 ……</div>
-            <div id="tabpage8">…… タブ8の中身 ……</div>
-            <div id="tabpage9">…… タブ9の中身 ……</div>
-            <div id="tabpage10">…… タブ10の中身 ……</div>
-            <div id="tabpage11">…… タブ11の中身 ……</div>
-            <div id="tabpage12">…… タブ12の中身 ……</div>
-        </div> -->
-
 
         <p id="tabcontrol">
             <a href="#tabpage1" class="tab">2024</a>
             <a href="#tabpage2" class="tab">2025</a>
         </p>
+
+
         <div id="tabbody">
             <div id="tabpage1" class="tabpage">
 
                 <div class="slider-group">
 
                     <div class="slider-card">
-
-                        …… タブ1の中身 ……
+                        4月
                         <table>
                             <tr>
-                                <th>日</th>
-                                <th>曜</th>
-                                <th>2024年</th>
-                                <th>(R6) 4月</th>
+                                <th class="day">日</th>
+                                <th class="day-of-week">曜</th>
+                                <th></th>
                                 <th>降り番予約者</th>
                             </tr>
                             <tr>
-                                <td>1</td>
-                                <td>月</td>
-                                <td colspan="2">✕</td>
+                                <td class="day">1</td>
+                                <td class="day-of-week">月</td>
+                                <td>✕</td>
                                 <td></td>
                                 <td><input type="checkbox"></td>
                             </tr>
                             <tr>
-                                <td>2</td>
-                                <td>火</td>
-                                <td colspan="2">R</td>
+                                <td class="day">2</td>
+                                <td class="day-of-week">火</td>
+                                <td>R</td>
+                                <td>
+                                    <div>肥田幸久</div>
+                                    <div>肥田実怜</div>
+                                    <div>肥田与幸</div>
+                                    <div>肥田実芳</div>
+                                </td>
+                                <td><input type="checkbox"></td>
+                            </tr>
+                            <tr>
+                                <td class="day">3</td>
+                                <td class="day-of-week">水</td>
+                                <td>コンサート</td>
                                 <td></td>
                                 <td><input type="checkbox"></td>
                             </tr>
                             <tr>
-                                <td>3</td>
-                                <td>水</td>
-                                <td colspan="2">R</td>
-                                <td></td>
-                                <td><input type="checkbox"></td>
-                            </tr>
-                            <tr>
-                                <td>4</td>
-                                <td>木</td>
-                                <td colspan="2">R</td>
+                                <td class="day">4</td>
+                                <td class="day-of-week">木</td>
+                                <td>R</td>
                                 <td></td>
                                 <td><input type="checkbox"></td>
                             </tr>
                         </table>
-
                     </div>
 
                     <div class="slider-card">
-
-                        …… タブ1の中身 ……
+                        5月
                         <table>
                             <tr>
                                 <th>日</th>
                                 <th>曜</th>
                                 <th>2024年</th>
-                                <th>(R6) 4月</th>
+                                <th>(R6) 5月</th>
                                 <th>降り番予約者</th>
                             </tr>
                             <tr>
@@ -140,13 +114,155 @@
                                 <td></td>
                             </tr>
                         </table>
+                    </div>
 
+                    <div class="slider-card">
+                        6月
+                        <table>
+                            <tr>
+                                <th>日</th>
+                                <th>曜</th>
+                                <th>2024年</th>
+                                <th>(R6) 6月</th>
+                                <th>降り番予約者</th>
+                            </tr>
+                            <tr>
+                                <td>1</td>
+                                <td>月</td>
+                                <td colspan="2">✕</td>
+                                <td></td>
+                                <td><input type="checkbox"></td>
+                            </tr>
+                            <tr>
+                                <td>2</td>
+                                <td>火</td>
+                                <td colspan="2">R</td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>3</td>
+                                <td>水</td>
+                                <td colspan="2">R</td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>4</td>
+                                <td>木</td>
+                                <td colspan="2">R</td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>5</td>
+                                <td>金</td>
+                                <td colspan="2">定期</td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                        </table>
                     </div>
 
                 </div>
 
             </div>
-            <div id="tabpage2" class="tabpage">…… タブ2の中身 ……</div>
+            <div id="tabpage2" class="tabpage">
+
+                <div class="slider-group">
+
+                    <div class="slider-card">
+                        4月
+                        <table>
+                            <tr>
+                                <th>日</th>
+                                <th>曜</th>
+                                <th>2025年</th>
+                                <th>(R6) 4月</th>
+                                <th>降り番予約者</th>
+                            </tr>
+                            <tr>
+                                <td>1</td>
+                                <td>月</td>
+                                <td colspan="2">✕</td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>2</td>
+                                <td>火</td>
+                                <td colspan="2">R</td>
+                                <td></td>
+                                <td><input type="checkbox"></td>
+                            </tr>
+                            <tr>
+                                <td>3</td>
+                                <td>水</td>
+                                <td colspan="2">R</td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>4</td>
+                                <td>木</td>
+                                <td colspan="2">R</td>
+                                <td></td>
+                                <td><input type="checkbox"></td>
+                            </tr>
+                        </table>
+                    </div>
+
+                    <div class="slider-card">
+                        5月
+                        <table>
+                            <tr>
+                                <th>日</th>
+                                <th>曜</th>
+                                <th>2025年</th>
+                                <th>(R6) 5月</th>
+                                <th>降り番予約者</th>
+                            </tr>
+                            <tr>
+                                <td>1</td>
+                                <td>月</td>
+                                <td colspan="2">✕</td>
+                                <td></td>
+                                <td><input type="checkbox"></td>
+                            </tr>
+                            <tr>
+                                <td>2</td>
+                                <td>火</td>
+                                <td colspan="2">R</td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>3</td>
+                                <td>水</td>
+                                <td colspan="2">R</td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>4</td>
+                                <td>木</td>
+                                <td colspan="2">R</td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>5</td>
+                                <td>金</td>
+                                <td colspan="2">定期</td>
+                                <td></td>
+                                <td><input type="checkbox"></td>
+                            </tr>
+                        </table>
+                    </div>
+
+                </div>
+
+            </div>
         </div>
     </div>
 
